# portfolio

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html  style.css
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
docs/: index.html  portfolio-website-d53830d5f1477723.js  portfolio-website_bg.wasm  portfolio_bg.wasm  style-ae395b3c89835ebc.css
src/: counter.rs  main.rs
