[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"
description = "Frontend for a static portfolio website"
repository = "https://github.com/camhendo/portfolio"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.83"
web-sys = "0.3.59"
gloo-utils = "0.1.5"
slab = "0.4.8"
gloo = "0.8.0"

